--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,23 @@ asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
+future==1.0.0
 gitpython
+gtts
 hachoir
 heroku3
-httpx[http2]
-httpx==0.27.2
-motor
-numpy
+httpx==0.27.0
+motor 
+numpy<2.0.0
 opencv-python
 pillow==9.5.0
 psutil
-py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+pyrogram==2.0.106
 python-dotenv
-pyyaml
+python-telegram-bot==21.1.1
+py-tgcalls==0.9.7
+pyyaml==6.0.1
 requests
 speedtest-cli
 spotipy
